--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,27 @@
 {
     "cSpell.words": [
+        "accusamus",
+        "adipisicing",
+        "aliquam",
+        "amet",
+        "assumenda",
+        "blanditiis",
         "Bodhi",
+        "consectetur",
+        "elit",
+        "enim",
+        "Facere",
+        "folivore",
+        "fugiat",
+        "Keepr",
+        "magni",
+        "natus",
+        "perspiciatis",
+        "piscivore",
         "Quokka",
-        "Sufjan"
+        "Repellendus",
+        "sint",
+        "Sufjan",
+        "sunt"
     ]
 }
