--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,21 +4,27 @@
         "adipisicing",
         "aliquam",
         "amet",
+        "Amiko",
         "assumenda",
         "blanditiis",
         "Bodhi",
         "consectetur",
+        "Duckbilled",
         "elit",
         "enim",
         "Facere",
         "folivore",
         "fugiat",
+        "jhgdja",
         "Keepr",
+        "Lernantino",
         "magni",
         "natus",
         "perspiciatis",
         "piscivore",
         "Quokka",
+        "Quokkas",
+        "Raksha",
         "Repellendus",
         "sint",
         "Sufjan",
